# svip

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DATABASE_INTEGRATION_SUMMARY.md  DATABASE_MODE_GUIDE.md  GITHUB_UPLOAD_SUMMARY.md  LICENSE  MANUAL.md  PROJECT_SUMMARY.md  QUICK_REFERENCE.md  README.md  USAGE.md  pyproject.toml  run_svip.py  run_svip_db.py  test_db_loader.py  verify_setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: tests.yml
config/: settings.py
data/: macro_inputs.yaml  sample_stocks.yaml  slow_variables.yaml  stocks_list_example.txt  theme_buckets.yaml  theme_map_example.yaml
src/: __init__.py  acceleration_engine.py  airsx_bridge.py  data_loader.py  db_loader.py  logger.py  macro_filter.py  models.py  portfolio_engine.py  report_generator.py  rotation_engine.py  svi_engine.py  tail_risk.py  valuation_engine.py  weight_engine.py
tests/: test_acceleration_engine.py  test_macro_filter.py  test_portfolio_engine.py  test_rotation_engine.py  test_svi_engine.py  test_tail_risk.py  test_valuation_engine.py  test_weight_engine.py
